Fix info images to position evenly and stop text from overflowing

--- a/styles.css
+++ b/styles.css
@@ -103,12 +103,16 @@ body {
 
 .info-imgs {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items: baseline;
     gap: 50px;
     padding-top: 50px;
     padding-bottom: 100px;
     margin: 0 200px;
+}
+
+.info-imgs .subtext {
+    width: 150px;
 }
 
 .info .text {
